Bug visibilidad cesta sobre buscador arreglado

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,7 +55,7 @@ header .cabecera{
     align-items: center;
     justify-content: center;
     padding: 1.5rem 7.5%;
-    z-index: 3;
+    z-index: 30;
 }
 /* Logo */
 header .logo{
@@ -169,7 +169,7 @@ header #cesta{
     align-items: center;
 }
 header #cesta.mostrarCesta{
-    z-index: 5;
+    z-index: 50;
     opacity: 1;
     transform: scale(1,1);
 }
